<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="hello">Hello World, AndroidJSONParsingActivity!</string>
    <string-array name="country_array">
        <item>Select Font</item>
        <item>Default.ttf</item>
        <item>Bailey Regular.ttf</item>
        <item>Choco Cooky.ttf</item>
        <item>Dahrlin Regular.ttf</item>
        <item>Fear.ttf</item>
        <item>Fancy Normal.ttf</item>
        <item>Gasoline.ttf</item>
        <item>Lapland Regular.ttf</item>
        <item>Lemonheads.ttf</item>
        <item>New Romantics.ttf</item>
        <item>NewZurica Regular.ttf</item>
        <item>Optane Bold.ttf</item>
        <item>Paddington.ttf</item>
        <item> Quantas Regular.ttf</item>
        <item>Rosemary-Regular.ttf</item>
        <item>Simplehandwritting-Regular.ttf</item>
        <item>Tango Regular.ttf</item>
        <item>Variane.ttf</item>
        <item>Ziggy Zoe.ttf</item>

    </string-array>

    <string name="prompt_text">Choose one</string>
    <string name="select_time">Select from time picker</string>
    <string name="not_text"> </string>

    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <color name="blue">#330066</color>
    <color name="bgcolor">#FFFFFF</color>
    <string name="app_name">Prospect Wizard</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>

    <string name="dummy_string">Dummy String</string>
    <string name="spinner_title">Select Font</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget">Forgot Password?</string>
    <string name="agree">I Agree To the Terms/Conditions</string>
    <string name="update">Update</string>

    <string name="textmail">RickRood@RoodHoldings.com</string>
    <string name="textname">Ingenuity2</string>
    <string name="textph">844-415-8195</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_type">Profile Type</string>
    <string name="Profile_ID">Profile ID</string>
    <string name="Companyname">System Web Address </string>
    <string name="www">www.</string>
    <string name="com">.com</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Phone">Phone</string>
    <string name="Timezone">Timezone</string>
    <string name="Gmail_Acct">Gmail Acct</string>
    <string name="Gmail_Password">Gmail Password</string>
    <string name="BCC_Me">BCC Me</string>


    <string name="notice_board">Subscribe To Our Health Tips </string>
    <string name="our_goal">Stay health and enjoy life in fullness</string>
    <string name="instruction">If you are hoping to stay health you are welcome to join us in our journey with million of people world wide on useful and life changing tips that will not
    only make you to stay health but strong as you grow older. </string>
    <string name="subscribe">Subscription status </string>
    <string name="status">Welcome back. Your subscription is still valid</string>
    <string name="registered">You can receive notification </string>
    <string name="un_register">You cannot receive notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_starting_mile">Enter starting mile</string>
    <string name="starting_mile">Starting mile</string>
    <string name="enter_ending_mile">Enter ending mile</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="ending_mile">Ending mile</string>
    <string name="previous_record">Edit record</string>
    <string name="name">Name</string>
    <string name="expense_amount">Expense amount</string>
    <string name="edit_record">Edit Tracker</string>
    <string name="cancel">Cancel</string>


</resources>
