<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/notice_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/notice_board" />

    <TextView
        android:id="@+id/our_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/our_goal"
        android:layout_below="@+id/notice_board"
        android:layout_alignRight="@id/notice_board"
        android:layout_alignEnd="@id/notice_board"/>


    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/instruction"
        android:lineSpacingExtra="4dp"
        android:layout_below="@+id/our_goal"
        android:layout_marginTop="48dp"
        android:layout_alignLeft="@id/notice_board"
        android:layout_alignStart="@id/notice_board"/>

    <CheckBox
        android:id="@+id/subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        android:layout_marginTop="32dp"
        android:layout_below="@id/instruction"/>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbarPosition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
