<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/loginlayout"
    android:padding="5dp" >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="right">

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/seting" />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageLogin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/appico3" />

    </LinearLayout>



    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textwww"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/text_background"
                android:text="@string/www"
                android:padding="12dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/cmpnyEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:saveEnabled="true"
                    android:background="@drawable/text_background"
                    android:hint="@string/Companyname"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textcom"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/text_background"
                android:text="@string/com"
                android:padding="12dp"
                android:singleLine="true"
                />
        </LinearLayout>


        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_background"
            android:hint="@string/Username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_background"
            android:hint="@string/password"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/forget"
            android:textColor="@drawable/textcolor"
            android:visibility="gone" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/btnLogin"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/white" />



    </LinearLayout>
</ScrollView>
</LinearLayout>