<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/managelayout"
    android:background="@drawable/background"
    tools:context=".activity.EditTrackerFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/edit_record"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etDialogName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDialogName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/text_background"
        android:ems="20"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/etDialogStartingMile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <EditText
        android:id="@+id/etDialogStartingMile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/text_background"
        android:ems="20"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/etDialogEndingMile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDialogName" />

    <EditText
        android:id="@+id/etDialogEndingMile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/text_background"
        android:ems="20"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/etDialogDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDialogStartingMile" />

    <EditText
        android:id="@+id/etDialogDesc"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/text_background"
        android:ems="20"
        android:gravity="top"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/btnDialogCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDialogEndingMile" />

    <Button
        android:id="@+id/btnDialogUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/update"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etDialogDesc"
        app:layout_constraintTop_toBottomOf="@+id/etDialogDesc" />

    <Button
        android:id="@+id/btnDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etDialogDesc"
        app:layout_constraintTop_toBottomOf="@+id/etDialogDesc" />


</android.support.constraint.ConstraintLayout>